fixed double scrollbar error

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,9 +75,8 @@ h6 {
 .hero {
   display: flex;
   gap: 50px;
-  padding-top: 120px;
+  padding-top: 150px;
   padding-bottom: 20px;
-  position: relative;
 }
 .hero .banner {
   flex: 1;
